# token-fusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_all.py
tests/: bench_compaction.py  test_agent.py  test_merging.py  test_pipeline.py
token_fusion/: __init__.py
token_fusion/agent/: __init__.py  compressor.py  context.py
token_fusion/merging/: __init__.py  attention.py  base.py  come.py  routing.py  tome.py
token_fusion/pipeline/: __init__.py  base.py  engine.py  rewind.py
token_fusion/pipeline/stages/: __init__.py  abbrev.py  cortex.py  diff_crunch.py  ionizer.py  log_crunch.py  neurosyntax.py  nexus.py  photon.py  quantum_lock.py  rle.py  search_crunch.py  semantic_dedup.py  structural_collapse.py  token_opt.py
token_fusion/utils/: content_type.py  simhash.py  token_counter.py
